# flaskapi-sqlalchemy-redis-auth

./: Dockerfile  README.md  docker-compose.yml  down.sh  pyproject.toml  up.sh
local/compose/db/: docker-compose.yml
local/compose/db/init-scripts/: create_tables.sql
local/compose/redis/: docker-compose.yml
postman/: Python Flask Banking API with Auth.postman_collection.json
python/: .env  main.py  requirements.txt
python/accounts/: accounts_bp.py  handlers.py  models.py  queries.py  repository.py
python/common/: __init__.py  app_factory.py  cache.py  configs.py  db.py  security.py
python/config/jwt/: module.py
python/config/redis/: module.py
python/configuration/: app.py  manager.py  models.py
python/handler/users/: module.py
python/messages/: module.py
python/repository/redis/: module.py
python/route/users/: module.py
python/security/: authorization.py  blacklist_cache.py  jwt.py  models.py
python/users/: handlers.py  models.py  queries.py  repository.py  security.py  users_bp.py
python/users/tests/: models.py  settings.py  test_repository.py
python/util/: module.py
src/: .env  main.py  wsgi.py
src/accounts/: handlers.py  repository.py
src/common/: app_factory.py
src/security/: authentication.py
src/users/: handlers.py  models.py
src/users/tests/: test_models.py  test_repository.py
