[tool.poetry]
name = "flask-api"
version = "0.1.0"
description = ""
authors = ["hvalfangst <hvalfangst@tidehunter.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = ">=7.4.4,<7.5.0"
pydantic = {version = ">=2.5.3,<2.6.0", extras = ["email"]}
bcrypt = ">=4.0.1,<4.1.0"
flask = ">=3.0.0,<3.1.0"
gunicorn = ">=20.1.0,<20.2.0"
pyjwt = ">=2.3.0,<2.4.0"
datetime = ">=5.4,<6.0"
redis = ">=3.5.3,<3.6.0"
flask-sqlalchemy = "3.1.1"
python-dotenv = ">=1.0.0,<1.1.0"
environs = ">=10.3.0,<10.4.0"
psycopg2-binary = ">=2.9.9,<2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
